<resources>
    <string name="app_name">Booking Trick</string>

    <string name="booking">Booking</string>
    <string name="center">Center</string>

    <string name="login1">Email o Contraseña Vacíos</string>
    <string name="login2">Email en Formato Incorrecto</string>
    <string name="login3">No Existe Usuario con Esos Datos</string>
    <string name="login4">Email no Verificado</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="menu_home">Reserve</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_profile">Profile</string>
    <string name="my_rooms">My Bookings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="sureExit">¿Seguro que quieres salir?</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>


    <string name="name">Nombre de Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="settings1">Email del usuario</string>
    <string name="settings2">Toca para cambiar el nombre</string>
    <string name="settings3">Toca para cambiar la contraseña</string>
    <string name="settings4">Información del Usuario</string>
    <string name="settings5">Ajustes de Aplicación</string>
    <string name="settings6">Modo Oscuro/Claro</string>
    <string name="settings7">Cambiar modo oscuro/claro</string>

    <string name="savedatereserve">Save date</string>
    <string name="selectdate">SELECT A DATE</string>
    <string name="selecthour">SELECT AN HOUR</string>
    <string name="savehour">Save hour</string>
</resources>